final front and back end